# Pets

./: .env.example  README.md  pyproject.toml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/core/: settings.py  settings_prod.py  urls.py
backend/users/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
core/: settings.py  urls.py
frontend/: .editorconfig  .env  .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: ConfigValidator.tsx  Dashboard.tsx  GoogleCallback.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/service/: api.ts
users/: urls.py  views.py
users/templates/: dashboard.html  home.html
